@@ -23,6 +23,7 @@
 --                                                                          --
 ------------------------------------------------------------------------------
 
+with ALI;      use ALI;
 with Debug;
 with Osint;    use Osint;
 with Output;   use Output;
@@ -154,6 +155,95 @@ package body Makeutl is
          Linker_Options_Buffer (Last_Linker_Option) := new String'(Option);
       end if;
    end Add_Linker_Option;
+
+   ------------------------------
+   -- Check_Source_Info_In_ALI --
+   ------------------------------
+
+   function Check_Source_Info_In_ALI (The_ALI : ALI_Id) return Boolean is
+      Unit_Name : Name_Id;
+   begin
+      U_Chk :
+      for U in ALIs.Table (The_ALI).First_Unit
+        .. ALIs.Table (The_ALI).Last_Unit
+      loop
+         --  Check if the file name is one of the source of the unit.
+
+         Get_Name_String (Units.Table (U).Uname);
+         Name_Len  := Name_Len - 2;
+         Unit_Name := Name_Find;
+
+         if File_Not_A_Source_Of (Unit_Name, Units.Table (U).Sfile) then
+            return False;
+         end if;
+
+         --  Do the same check for each of the withed units
+
+         W_Check :
+         for W in Units.Table (U).First_With .. Units.Table (U).Last_With loop
+            declare
+               WR : ALI.With_Record renames Withs.Table (W);
+            begin
+               if WR.Sfile /= No_File then
+                  Get_Name_String (WR.Uname);
+                  Name_Len  := Name_Len - 2;
+                  Unit_Name := Name_Find;
+
+                  if File_Not_A_Source_Of (Unit_Name, WR.Sfile) then
+                     return False;
+                  end if;
+               end if;
+            end;
+         end loop W_Check;
+      end loop U_Chk;
+
+      --  Check also the subunits
+
+      D_Check :
+      for D in ALIs.Table (The_ALI).First_Sdep
+        .. ALIs.Table (The_ALI).Last_Sdep
+      loop
+         declare
+            SD : Sdep_Record renames Sdep.Table (D);
+         begin
+            Unit_Name := SD.Subunit_Name;
+
+            if Unit_Name /= No_Name then
+               --  For separates, the file is no longer associated with the
+               --  unit ("proc-sep.adb" is not associated with unit "proc.sep".
+               --  So we need to check whether the source file still exists in
+               --  the source tree: it will if it matches the naming scheme
+               --  (and then will be for the same unit).
+
+               if Find_Source
+                 (In_Tree => Project_Tree,
+                  Project => No_Project,
+                  Base_Name => SD.Sfile) = No_Source
+               then
+                  --  If this is not a runtime file (when using -a) ? Otherwise
+                  --  we get complaints about a-except.adb, which uses
+                  --  separates.
+
+                  if not Check_Readonly_Files
+                    or else Find_File (SD.Sfile, Osint.Source) = No_File
+                  then
+                     if Verbose_Mode then
+                        Write_Line
+                          ("While parsing ALI file: Sdep associates "
+                           & Get_Name_String (SD.Sfile)
+                           & " with unit " & Get_Name_String (Unit_Name)
+                           & " but this does not match what was found while"
+                           & " parsing the project. Will recompile");
+                     end if;
+                     return False;
+                  end if;
+               end if;
+            end if;
+         end;
+      end loop D_Check;
+
+      return True;
+   end Check_Source_Info_In_ALI;
 
    -----------------
    -- Create_Name --
