@@ -1,3 +1,11 @@
+2009-07-28  Emmanuel Briot  <briot@adacore.com>
+
+	* make.adb, makeutl.adb, makeutl.ads (Project_Tree): Duplicates the
+	global variable that also exists in makeutl.ads, and that some routines
+	in that package use already.
+	(Check): Moved part of the code to makeutl.adb for better sharing with
+	gprbuild.
+
 2009-07-28  Arnaud Charlet  <charlet@adacore.com>
 
 	* gcc-interface/Make-lang.in: Update dependencies.
